--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,4 @@
-<h1>rico</h1>
+<% if user_signed_in? %>
+<h1>hola <%= current_user.email %></h1>
 <p>Find me in app/views/welcome/index.html.erb</p>
+<%end%>
